Added ice cream bite

--- a/index.html
+++ b/index.html
@@ -11,7 +11,15 @@
         <div id="app">
             <div class="happy-icecream">
                 <div class="scoop">
-
+                    <div class="bite one"></div>
+                    <div class="bite two"></div>
+                    <div class="bite three"></div>
+                    <div class="scoop-cloud">
+                        <div class="cloud one"></div>
+                        <div class="cloud two"></div>
+                        <div class="cloud three"></div>
+                        <div class="cloud four"></div>
+                    </div>
                 </div>
                 <div class="cone-coat"> 
                     
