--- a/index.html
+++ b/index.html
@@ -15,17 +15,22 @@
                     <div class="bite two"></div>
                     <div class="bite three"></div>
                     <div class="scoop-cloud">
-                        <div class="cloud one"></div>
-                        <div class="cloud two"></div>
-                        <div class="cloud three"></div>
-                        <div class="cloud four"></div>
+                        <div class="cloud"></div>
+                        <div class="cloud"></div>
+                        <div class="cloud"></div>
+                        <div class="cloud"></div>
                     </div>
                 </div>
                 <div class="cone-coat"> 
                     
                     </div>
                 <div class="cone"> 
-                    
+                    <div class="line-left"></div>
+                    <div class="line-left l-two"></div>
+                    <div class="line-left l-three"></div>
+                    <div class="line-right r-one"></div>
+                    <div class="line-right r-two"></div>
+                    <div class="line-right r-three"></div>
                 </div>
             </div>
         </div>
