--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <body>
         <div id="app">
             <div class="happy-icecream">
+                <div class="cherry">
+                    <div class="cherry-stem"></div>
+                </div>
                 <div class="scoop">
                     <div class="bite one"></div>
                     <div class="bite two"></div>
@@ -21,9 +24,7 @@
                         <div class="cloud"></div>
                     </div>
                 </div>
-                <div class="cone-coat"> 
-                    
-                    </div>
+                <div class="cone-coat"> </div>
                 <div class="cone"> 
                     <div class="line-left"></div>
                     <div class="line-left l-two"></div>
