--- a/index.html
+++ b/index.html
@@ -23,6 +23,19 @@
                         <div class="cloud"></div>
                         <div class="cloud"></div>
                     </div>
+                    <div class="face">
+                        <div class="brows">
+                            <div class="brow left-brow"></div>
+                            <div class="brow right-brow"></div>
+                        </div>
+                        <div class="eyes">
+                            <div class="eye left-eye">
+                                <div class="eyeball"></div>
+                            </div>
+                            <div class="eye right-eye"></div>
+                                <div class="eyeball"></div>
+                        </div>
+                    </div>
                 </div>
                 <div class="cone-coat"> </div>
                 <div class="cone"> 
