--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                         <div class="cloud"></div>
                         <div class="cloud"></div>
                         <div class="cloud"></div>
-                        <div class="cloud"></div>
+                        <div class="cloud four"></div>
                     </div>
                     <div class="face">
                         <div class="brows">
@@ -35,9 +35,11 @@
                             <div class="eye right-eye"></div>
                                 <div class="eyeball"></div>
                         </div>
+                        <div class="smile"></div>
                     </div>
                 </div>
                 <div class="cone-coat"> </div>
+                <div class="cone-shadow"></div>
                 <div class="cone"> 
                     <div class="line-left"></div>
                     <div class="line-left l-two"></div>
