--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <div id="app">
             <div class="happy-icecream">
                 <div class="cherry">
+                    <div class="cherry-stem-shadow"></div>
                     <div class="cherry-stem"></div>
                 </div>
                 <div class="scoop">
