--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <title>Parcel Sandbox</title>
         <meta charset="UTF-8" />
-        <link rel="stylesheet" type="text/css" href="styles.css" />
+        <link rel="stylesheet" type="text/css" href="style.css" />
     </head>
 
     <body>
